print formatting and readme update (compilation and running)